--- a/NegotiationGame.v2/Server/appsettings.Development.json
+++ b/NegotiationGame.v2/Server/appsettings.Development.json
@@ -3,6 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.SignalR": "Debug",
+      "Microsoft.AspNetCore.Http.Connections": "Debug"
     }
   },
   "IdentityServer": {
