--- a/NegotiationGame.v2/Server/appsettings.json
+++ b/NegotiationGame.v2/Server/appsettings.json
@@ -6,6 +6,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.SignalR": "Debug",
+      "Microsoft.AspNetCore.Http.Connections": "Debug"
     }
   },
   "IdentityServer": {
